03-kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-deploy
  namespace: echo-ns
spec:
  replicas: 3
  selector:
    matchLabels:
      app: echo
    template:
      metadata:
        labels:
          app: echo
      spec:
        containers:
          - name: echo
            image: tropt1/echo-app:latest
