03-kubernetes/sevice.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-svc
  namespace: echo-ns
spec:
  type: ClusterIP
  selector:
    app: echo
  ports:
    - port: 80
      targetPort: 8000
